# esp-libopus

./: CMakeLists.txt  ChangeLog  README  celt_sources.mk  component.mk  opus_sources.mk  silk_sources.mk
celt/: celt_encoder.c
include/: opus_custom.h
silk/: quant_LTP_gains.c
src/: opus_encoder.c
